[shenker/cloning] As used on 220824 to order Marionette promoter oligos.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/220824 Marionette parts.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/220824 Marionette parts.ipynb
@@ -670,7 +670,7 @@
     "\n",
     "apply = {\"Sequence\": workflow.normalize_seq}\n",
     "plasmid_apply = strain_apply = {\"Names\": None}\n",
-    "overwrite = False\n",
+    "overwrite = True\n",
     "\n",
     "primer_ids = {}\n",
     "primer_pairs = {}\n",
@@ -680,18 +680,18 @@
     "\n",
     "source_seqs_all = list(\n",
     "    it.chain(\n",
+    "        (\n",
+    "            (ajm_to_promoter[ajm], ajm_to_id[ajm], ajm, \"promoter\", seq)\n",
+    "            for ajm, seq in promoter_source_seqs.items()\n",
+    "        )\n",
     "        # (\n",
-    "        #     (ajm_to_promoter[ajm], ajm_to_id[ajm], ajm, \"promoter\", seq)\n",
-    "        #     for ajm, seq in promoter_source_seqs.items()\n",
-    "        # )\n",
-    "        (\n",
-    "            (ajm_to_repressor[ajm], ajm_to_id[ajm], ajm, \"cds\", seq)\n",
-    "            for ajm, seq in cds_source_seqs.items()\n",
-    "        ),\n",
-    "        (\n",
-    "            (ajm_to_aux[ajm], ajm_to_id[ajm], ajm, \"aux\", seq)\n",
-    "            for ajm, seq in aux_source_seqs.items()\n",
-    "        ),\n",
+    "        #     (ajm_to_repressor[ajm], ajm_to_id[ajm], ajm, \"cds\", seq)\n",
+    "        #     for ajm, seq in cds_source_seqs.items()\n",
+    "        # ),\n",
+    "        # (\n",
+    "        #     (ajm_to_aux[ajm], ajm_to_id[ajm], ajm, \"aux\", seq)\n",
+    "        #     for ajm, seq in aux_source_seqs.items()\n",
+    "        # ),\n",
     "    )\n",
     ")\n",
     "\n",
@@ -929,42 +929,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lib_strains.commit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(lib_strains.remote)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lib_strains.local"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lib_strains.commit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "{o[\"Name\"]: len(o[\"Sequence\"]) for o in olib_oligos.local.values()}"
    ]
   },
@@ -983,7 +947,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "storage_plasmid_seqs[\"AM19_PPhlF\"].seq_lower()"
+    "storage_plasmid_seqs[\"AM19_PSalTTC\"].seq_lower()"
    ]
   },
   {
@@ -1031,10 +995,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for name, oligo in olib_oligos.local.items():\n",
-    "    if oligo[\"Name\"].startswith(\"marionette\"):\n",
-    "        #if len(oligo['Sequence']) > 60:\n",
-    "        print(f\"{name}\\t{oligo['Sequence']}\")"
+    "for name, oligo in olib_oligos.items():\n",
+    "    if oligo[\"Name\"].startswith(\"marionette_prom\"):\n",
+    "        if len(oligo['Sequence']) > 60:\n",
+    "            print(f\"{name}\\t{oligo['Sequence']}\")"
    ]
   },
   {
