[shenker/cloning] Forgot to add extra_promoter_description for PLuxB. Did this manually to give the same result as this code.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/220824 Marionette parts.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/220824 Marionette parts.ipynb
@@ -278,6 +278,8 @@
     "    for name, loc in promoter_locations.items()\n",
     "}\n",
     "# add extra, otherwise there's an undesired BsaI site at the 5' end\n",
+    "# TODO: adding this base to promoter_source_seqs instead of forward_overhang means we get a slightly lower Tm than we were expecting\n",
+    "# this was a mistake, would be more elegant to add it to overhang\n",
     "promoter_source_seqs[\"pAJM.474\"] = Seq(\"G\") + promoter_source_seqs[\"pAJM.474\"]\n",
     "extra_promoter_description = {\n",
     "    \"pAJM.474\": \"Prepended a G to the promoter sequence to avoid creating an undesired BsaI site.\"\n",
@@ -905,6 +907,8 @@
     "            part_description = f\"Adam Meyer's {name} promoter. Sequence taken unmodified from color-coded region in the supplemental information for Meyer 2019.\"\n",
     "            if not anneal_promoter:\n",
     "                part_description += f\" Sequences PCRed from {id_} ({ajm}).\"\n",
+    "            if ajm in extra_promoter_description:\n",
+    "                part_description += f\" {extra_promoter_description[ajm]}\"\n",
     "        else:\n",
     "            if variant == \"bicistronic\":\n",
     "                part_description = f\"Adam Meyer's {name} CDS followed by a bicistronic CDS placeholder. Sequence taken unmodified from color-coded region in the supplemental information for Meyer 2019. Sequences PCRed from {id_} ({ajm}).\"\n",
@@ -947,7 +951,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "storage_plasmid_seqs[\"AM19_PSalTTC\"].seq_lower()"
+    "storage_plasmid_seqs[\"AM19_PLuxB\"].seq_lower()"
    ]
   },
   {
