[shenker/image_analysis] Used mosaic code to make images and movies of FISH readout.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/220817 Mosaic animation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/220817 Mosaic animation.ipynb
@@ -19,6 +19,7 @@
     "import random\n",
     "from tqdm.auto import tqdm\n",
     "import nd2reader\n",
+    "import h5py\n",
     "import skimage\n",
     "from skimage.transform import SimilarityTransform, warp\n",
     "import holoviews as hv\n",
@@ -27,7 +28,9 @@
     "from cytoolz import partial\n",
     "from itertools import cycle, repeat, chain\n",
     "from numbers import Number\n",
+    "from pathlib import Path\n",
     "import av\n",
+    "from tqdm.auto import trange, tqdm\n",
     "import dask\n",
     "import distributed\n",
     "from distributed import Client\n",
@@ -47,7 +50,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Config"
    ]
@@ -58,7 +63,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nd2_filename = \"/home/jqs1/scratch/jqs1/microscopy/220704/220704rbs_library_fish.nd2\""
+    "# nd2_filename = \"/home/jqs1/scratch/jqs1/microscopy/220704/220704rbs_library_fish.nd2\"\n",
+    "nd2_filename = \"/home/jqs1/scratch/jqs1/microscopy/220718/RBS_DEG_library_20x.nd2\""
    ]
   },
   {
@@ -76,30 +82,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pickle.dumps(nd2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "default_channels = (\"YFP-DUAL\", \"RFP-Penta\")\n",
     "channel_to_color = {\n",
     "    \"BF\": \"#ffffff\",\n",
     "    \"RFP-PENTA\": \"#e22400\",\n",
+    "    \"RFP-Penta\": \"#e22400\",\n",
     "    \"YFP-DUAL\": \"#f5eb00\",\n",
     "    # \"GFP\": \"#76ba40\",\n",
-    "    # \"CY5\": \"#e292fe\",\n",
+    "    \"Cy5\": \"#e292fe\",\n",
+    "    # \"Cy7\": \"#FF0000\"\n",
     "    # \"BFP\": \"#3a87fd\",\n",
     "}"
    ]
@@ -113,13 +104,22 @@
     "cluster = SLURMCluster(\n",
     "    queue=\"short\",\n",
     "    walltime=\"02:00:00\",\n",
-    "    memory=\"4GB\",\n",
+    "    memory=\"16GB\",\n",
     "    local_directory=\"/tmp\",\n",
     "    log_directory=\"/home/jqs1/log\",\n",
     "    cores=1,\n",
     "    processes=1,\n",
     ")\n",
     "client = Client(cluster)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cluster.scale(2)"
    ]
   },
   {
@@ -142,7 +142,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Mosaic"
    ]
@@ -190,12 +192,15 @@
    "outputs": [],
    "source": [
     "def colorized_frame(\n",
-    "    nd2, t=0, v=0, channels=(\"YFP-DUAL\", \"RFP-PENTA\"), scaling_funcs=None\n",
+    "    channel_to_color,\n",
+    "    get_frame_func,\n",
+    "    filename,\n",
+    "    t=0,\n",
+    "    v=0,\n",
+    "    channels=default_channels,\n",
+    "    scaling_funcs=None,\n",
     "):\n",
-    "    imgs = [\n",
-    "        nd2.get_frame_2D(v=v, t=t, c=nd2.metadata[\"channels\"].index(channel))\n",
-    "        for channel in channels\n",
-    "    ]\n",
+    "    imgs = [get_frame_func(filename, v, channel, t) for channel in channels]\n",
     "    if scaling_funcs:\n",
     "        for idx in range(len(channels)):\n",
     "            channel = channels[idx]\n",
@@ -278,7 +283,9 @@
     "        visible = rectangles_intersect(viewport_ul, viewport_lr, frame_ul, frame_lr)\n",
     "        if visible:\n",
     "            img = get_frame_func(t=timepoint, v=pos_num)\n",
-    "            output_img += warp(img, frame_transform, output_shape=output_dims[::-1])\n",
+    "            output_img += warp(\n",
+    "                img, frame_transform, output_shape=output_dims[::-1], order=2\n",
+    "            )\n",
     "    return output_img"
    ]
   },
@@ -288,11 +295,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def export_video(ary, filename, fps=30, codec=\"h264\"):\n",
+    "def export_video(ary, filename, fps=30, codec=\"h264\", crf=22, tune=\"stillimage\"):\n",
     "    with av.open(filename, mode=\"w\") as container:\n",
-    "        stream = container.add_stream(codec, rate=fps)\n",
-    "        stream.width = ary[0].shape[0]\n",
-    "        stream.height = ary[0].shape[1]\n",
+    "        stream = container.add_stream(codec, rate=fps, options={\"crf\": str(crf), \"tune\": tune})\n",
+    "        stream.width = ary[0].shape[1]\n",
+    "        stream.height = ary[0].shape[0]\n",
     "        stream.pix_fmt = \"yuv420p\"\n",
     "        for idx in range(len(ary)):\n",
     "            img = np.round(255 * ary[idx]).astype(np.uint8)\n",
@@ -319,11 +326,11 @@
     "            img = nd2.get_frame_2D(v=v, t=t, c=nd2.metadata[\"channels\"].index(channel))\n",
     "            if min_value == -1:\n",
     "                min_value = img.min()\n",
-    "                #max_value = img.max()\n",
+    "                # max_value = img.max()\n",
     "                max_value = np.percentile(img, 99.9)\n",
     "            else:\n",
     "                min_value = min(min_value, img.min())\n",
-    "                #max_value = max(max_value, img.max())\n",
+    "                # max_value = max(max_value, img.max())\n",
     "                max_value = max(max_value, np.percentile(img, 99.9))\n",
     "        extrema[channel] = (min_value, max_value)\n",
     "    return extrema\n",
@@ -332,8 +339,15 @@
     "def get_scaling_funcs(extrema):\n",
     "    scaling_funcs = {}\n",
     "    for channel, (min_value, max_value) in extrema.items():\n",
-    "        scaling_funcs[channel] = lambda x: np.clip(\n",
-    "            (x - min_value) / (max_value - min_value), 0, 1\n",
+    "        # careful! there's an unfortunate late-binding issue\n",
+    "        # SEE: https://stackoverflow.com/questions/1107210/python-create-function-in-a-loop-capturing-the-loop-variable\n",
+    "        # TODO: this should be a single clip...\n",
+    "        scaling_funcs[\n",
+    "            channel\n",
+    "        ] = lambda x, min_value=min_value, max_value=max_value: np.clip(\n",
+    "            (np.clip(x, min_value, max_value) - min_value) / (max_value - min_value),\n",
+    "            0,\n",
+    "            1,\n",
     "        )\n",
     "    return scaling_funcs"
    ]
@@ -351,7 +365,7 @@
     "    width=1024,\n",
     "    height=1024,\n",
     "    # frame_rate=1, #TODO\n",
-    "    channels=(\"YFP-DUAL\", \"RFP-PENTA\"),\n",
+    "    channels=default_channels,\n",
     "    scaling_funcs=None,\n",
     "    delayed=True,\n",
     "    # ignore_exceptions=True,\n",
@@ -377,10 +391,15 @@
     "    }\n",
     "    positions = workflow.get_position_metadata(metadata)\n",
     "    # TODO\n",
-    "    small_positions = positions[(positions[\"y_idx\"] < 3) & (positions[\"x_idx\"] < 3)]\n",
+    "    # small_positions = positions[(positions[\"y_idx\"] < 3) & (positions[\"x_idx\"] < 3)]\n",
     "    image_limits = workflow.get_filename_image_limits(metadata)\n",
-    "    #get_frame_func = None#partial(colorized_frame, nd2, scaling_funcs=scaling_funcs)\n",
-    "    get_frame_func = partial(colorized_frame, None, scaling_funcs=scaling_funcs)#partial(colorized_frame, nd2, scaling_funcs=scaling_funcs)\n",
+    "    get_frame_func = partial(\n",
+    "        colorized_frame,\n",
+    "        channel_to_color,\n",
+    "        workflow.get_nd2_frame,\n",
+    "        filename,\n",
+    "        scaling_funcs=scaling_funcs,\n",
+    "    )\n",
     "    input_dims = (\n",
     "        image_limits[filename][0][1] + 1,\n",
     "        image_limits[filename][1][1] + 1,\n",
@@ -392,7 +411,7 @@
     "        if timepoints is None:\n",
     "            timepoints = cycle(range(nd2.sizes[\"t\"]))\n",
     "    animation = [\n",
-    "        delayed(mosaic_frame)(get_frame_func, nd2, small_positions, input_dims, t, scale=s)\n",
+    "        delayed(mosaic_frame)(get_frame_func, positions, input_dims, t, scale=s)\n",
     "        for t, s in zip(timepoints, scale)\n",
     "    ]\n",
     "    return animation"
@@ -405,16 +424,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "extrema = get_intensity_extrema(nd2, (\"YFP-DUAL\", \"RFP-PENTA\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "extrema"
+    "extrema = get_intensity_extrema(nd2, (\"YFP-DUAL\", \"RFP-Penta\"))"
    ]
   },
   {
@@ -441,7 +451,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaling_funcs = get_scaling_funcs({'YFP-DUAL': (262, 8000), 'RFP-PENTA': (278, 5000)})"
+    "scaling_funcs = get_scaling_funcs({\"YFP-DUAL\": (262, 8000), \"RFP-Penta\": (278, 8000)})"
    ]
   },
   {
@@ -450,7 +460,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = nd2.get_frame_2D(t=0, v=0, c=nd2.metadata[\"channels\"].index(\"YFP-DUAL\"))"
+    "img = nd2.get_frame_2D(t=80, v=0, c=nd2.metadata[\"channels\"].index(\"YFP-DUAL\"))"
    ]
   },
   {
@@ -477,10 +487,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "img = nd2.get_frame_2D(t=10, v=0, c=nd2.metadata[\"channels\"].index(\"RFP-Penta\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_scaled = scaling_funcs[\"RFP-Penta\"](img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(img_scaled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%time\n",
     "scale = repeat(0.3)  # [0.3, 0.3, 0.3, 0.3]\n",
-    "#timepoints = range(0, 119, 30)\n",
-    "timepoints = range(0, 110, 10)#[20,40,60]\n",
+    "# timepoints = range(0, 119, 30)\n",
+    "# timepoints = range(0, 110, 10)#[20,40,60]\n",
+    "timepoints = [20, 40, 60]\n",
     "animation_delayed = mosaic_animate_scale(\n",
     "    nd2_filename,\n",
     "    scale,\n",
@@ -488,42 +526,6 @@
     "    scaling_funcs=scaling_funcs,\n",
     "    delayed=True,\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pickle"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nd2.__reduce_ex__(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nd2.__reduce_ex__(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pickle.dumps(nd2)"
    ]
   },
   {
@@ -541,7 +543,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.gather(animation_future)"
+    "a = client.gather(animation_future[1])"
    ]
   },
   {
@@ -550,8 +552,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(20,20))\n",
-    "plt.imshow(a[1])"
+    "a[0].max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20, 20))\n",
+    "plt.imshow(a)"
    ]
   },
   {
@@ -571,6 +582,258 @@
    "source": [
     "Video(\"/home/jqs1/scratch/jqs1/microscopy/220704/mosaics/export_test.mp4\", embed=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# FISH"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fish_dir = Path(\"/home/jqs1/scratch/jqs1/microscopy/220718/FISH/real_run\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_fish_frame(filename, v, channel, t):\n",
+    "    with h5py.File(filename / f\"fov={v}_config={channel}_t={t}\") as f:\n",
+    "        frame = f[\"data\"][()]\n",
+    "    return frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fish_colors = {\n",
+    "    \"BF\": \"#ffffff\",\n",
+    "    \"RFP\": \"#e22400\",\n",
+    "    # \"YFP-DUAL\": \"#f5eb00\",\n",
+    "    # \"GFP\": \"#76ba40\",\n",
+    "    \"Cy5\": \"#e292fe\",\n",
+    "    \"Cy7\": \"#00faff\"\n",
+    "    # \"BFP\": \"#3a87fd\",\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fish_scaling_funcs = get_scaling_funcs(\n",
+    "    {\n",
+    "        \"BF\": (40_000, 65_500),\n",
+    "        \"RFP\": (8000, 15000),\n",
+    "        \"Cy5\": (5_000, 40000),\n",
+    "        \"Cy7\": (2500, 4_000),\n",
+    "    }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fish_scaling_funcs[\"Cy7\"](2172)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = colorized_frame(\n",
+    "    fish_colors,\n",
+    "    get_fish_frame,\n",
+    "    fish_dir,\n",
+    "    1,\n",
+    "    8,\n",
+    "    [\"Cy7\"],\n",
+    "    scaling_funcs=fish_scaling_funcs,\n",
+    ")\n",
+    "plt.figure(figsize=(40, 40))\n",
+    "plt.imshow(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = colorized_frame(\n",
+    "    fish_colors,\n",
+    "    get_fish_frame,\n",
+    "    fish_dir,\n",
+    "    1,\n",
+    "    8,\n",
+    "    [\"Cy5\"],\n",
+    "    scaling_funcs=fish_scaling_funcs,\n",
+    ")\n",
+    "plt.figure(figsize=(40, 40))\n",
+    "plt.imshow(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = colorized_frame(\n",
+    "    fish_colors,\n",
+    "    get_fish_frame,\n",
+    "    fish_dir,\n",
+    "    1,\n",
+    "    8,\n",
+    "    [\"RFP\"],\n",
+    "    scaling_funcs=fish_scaling_funcs,\n",
+    ")\n",
+    "plt.figure(figsize=(40, 40))\n",
+    "plt.imshow(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = colorized_frame(\n",
+    "    fish_colors,\n",
+    "    get_fish_frame,\n",
+    "    fish_dir,\n",
+    "    1,\n",
+    "    8,\n",
+    "    [\"RFP\", \"Cy5\", \"Cy7\"],\n",
+    "    scaling_funcs=fish_scaling_funcs,\n",
+    ")\n",
+    "plt.figure(figsize=(40, 40))\n",
+    "plt.imshow(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = colorized_frame(\n",
+    "    fish_colors,\n",
+    "    get_fish_frame,\n",
+    "    fish_dir,\n",
+    "    1,\n",
+    "    8,\n",
+    "    [\"BF\", \"RFP\", \"Cy5\", \"Cy7\"],\n",
+    "    scaling_funcs=fish_scaling_funcs,\n",
+    ")\n",
+    "plt.figure(figsize=(40, 40))\n",
+    "plt.imshow(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = colorized_frame(\n",
+    "    fish_colors,\n",
+    "    get_fish_frame,\n",
+    "    fish_dir,\n",
+    "    1,\n",
+    "    8,\n",
+    "    [\"BF\", \"RFP\", \"Cy5\", \"Cy7\"],\n",
+    "    scaling_funcs=fish_scaling_funcs,\n",
+    ")\n",
+    "plt.figure(figsize=(40, 40))\n",
+    "plt.imshow(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "frames = [\n",
+    "    colorized_frame(\n",
+    "        fish_colors,\n",
+    "        get_fish_frame,\n",
+    "        fish_dir,\n",
+    "        t,\n",
+    "        8,\n",
+    "        [\"Cy7\"],\n",
+    "        scaling_funcs=fish_scaling_funcs,\n",
+    "    )\n",
+    "    for t in trange(1, 11)\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "rescaled_frames = [skimage.transform.rescale(f, 0.5, anti_aliasing=True, channel_axis=-1) for f in tqdm(frames)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "export_video(rescaled_frames, \"/home/jqs1/_temp/FISH_Cy7.mp4\", fps=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!du -hs /home/jqs1/_temp/FISH_BF.mp4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
