[shenker/image_analysis] Mosaic animation works. Got dask.delayed and anti-aliasing working. Looks sick.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/220826 Mosaic animation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/220826 Mosaic animation.ipynb
@@ -22,11 +22,12 @@
     "import h5py\n",
     "import skimage\n",
     "from skimage.transform import SimilarityTransform, warp\n",
+    "import scipy.ndimage as ndi\n",
     "import holoviews as hv\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.colors import hex2color\n",
     "from cytoolz import partial\n",
-    "from itertools import cycle, repeat, chain\n",
+    "import itertools as it\n",
     "from numbers import Number\n",
     "from pathlib import Path\n",
     "import av\n",
@@ -63,8 +64,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# nd2_filename = \"/home/jqs1/scratch/jqs1/microscopy/220704/220704rbs_library_fish.nd2\"\n",
-    "nd2_filename = \"/home/jqs1/scratch/jqs1/microscopy/220718/RBS_DEG_library_20x.nd2\""
+    "nd2_filename = \"/home/jqs1/scratch/jqs1/microscopy/220704/220704rbs_library_fish.nd2\"\n",
+    "# nd2_filename = \"/home/jqs1/scratch/jqs1/microscopy/220718/RBS_DEG_library_20x.nd2\""
    ]
   },
   {
@@ -82,7 +83,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "default_channels = (\"YFP-DUAL\", \"RFP-Penta\")\n",
+    "#default_channels = (\"YFP-DUAL\", \"RFP-Penta\")\n",
+    "default_channels = (\"YFP-DUAL\", \"RFP-PENTA\")\n",
     "channel_to_color = {\n",
     "    \"BF\": \"#ffffff\",\n",
     "    \"RFP-PENTA\": \"#e22400\",\n",
@@ -103,8 +105,8 @@
    "source": [
     "cluster = SLURMCluster(\n",
     "    queue=\"short\",\n",
-    "    walltime=\"02:00:00\",\n",
-    "    memory=\"16GB\",\n",
+    "    walltime=\"03:00:00\",\n",
+    "    memory=\"4GB\",\n",
     "    local_directory=\"/tmp\",\n",
     "    log_directory=\"/home/jqs1/log\",\n",
     "    cores=1,\n",
@@ -119,7 +121,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cluster.scale(2)"
+    "cluster.scale(100)"
    ]
   },
   {
@@ -128,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cluster.adapt(maximum=300)"
+    "cluster.adapt(maximum=500)"
    ]
   },
   {
@@ -147,6 +149,21 @@
    },
    "source": [
     "# Mosaic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_delayed(delayed):\n",
+    "    if delayed is True:\n",
+    "        return dask.delayed(pure=True)\n",
+    "    elif delayed is False:\n",
+    "        return lambda func, **kwargs: func\n",
+    "    else:\n",
+    "        return delayed"
    ]
   },
   {
@@ -251,15 +268,23 @@
     "    image_dims,\n",
     "    timepoint,\n",
     "    center=None,\n",
+    "    offset=None,\n",
     "    scale=1,\n",
     "    output_dims=(1024, 1024),\n",
+    "    anti_aliasing=True,\n",
+    "    delayed=False\n",
     "):\n",
+    "    delayed = get_delayed(delayed)\n",
+    "    if center is not None and offset is not None:\n",
+    "        raise ValueError(\"can only specify at most one of center, offset\")\n",
     "    if center is None:\n",
     "        columns = positions[\"x_idx\"].max() - positions[\"x_idx\"].min() + 1\n",
     "        rows = positions[\"y_idx\"].max() - positions[\"y_idx\"].min() + 1\n",
-    "        center = (image_dims[0] * columns / 2, image_dims[1] * rows / 2)\n",
+    "        center = np.array([image_dims[0] * columns / 2, image_dims[1] * rows / 2])\n",
+    "    if offset is not None:\n",
+    "        center += np.array(offset)\n",
     "    viewport_transform = output_transformation(*image_dims, *output_dims)\n",
-    "    output_img = np.zeros((output_dims[1], output_dims[0], 3))\n",
+    "    output_img = delayed(np.zeros)((output_dims[1], output_dims[0], 3))\n",
     "    viewport_ul = (0, 0)\n",
     "    viewport_lr = (output_dims[0] - 1, output_dims[1] - 1)  # TODO: off-by-one?\n",
     "    for (filename, pos_num), position in positions.iterrows():\n",
@@ -282,9 +307,13 @@
     "        frame_lr = frame_transform.inverse((image_dims[0] - 1, image_dims[1] - 1))[0]\n",
     "        visible = rectangles_intersect(viewport_ul, viewport_lr, frame_ul, frame_lr)\n",
     "        if visible:\n",
-    "            img = get_frame_func(t=timepoint, v=pos_num)\n",
-    "            output_img += warp(\n",
-    "                img, frame_transform, output_shape=output_dims[::-1], order=2\n",
+    "            img = delayed(get_frame_func)(t=timepoint, v=pos_num)\n",
+    "            if anti_aliasing:\n",
+    "                # taken from skimage.transform.resize\n",
+    "                anti_aliasing_sigma = max(0, (1 / scale - 1) / 2) * 2 # TODO: fix fudge factor\n",
+    "                img = delayed(ndi.gaussian_filter)(img, (anti_aliasing_sigma, anti_aliasing_sigma, 0), mode=\"constant\")\n",
+    "            output_img += delayed(warp)(\n",
+    "                img, frame_transform, output_shape=output_dims[::-1], order=3\n",
     "            )\n",
     "    return output_img"
    ]
@@ -362,18 +391,18 @@
     "    filename,\n",
     "    scale=1,\n",
     "    timepoints=None,\n",
+    "    center=None,\n",
+    "    offset=None,\n",
     "    width=1024,\n",
     "    height=1024,\n",
     "    # frame_rate=1, #TODO\n",
     "    channels=default_channels,\n",
     "    scaling_funcs=None,\n",
     "    delayed=True,\n",
+    "    progress_bar=tqdm,\n",
     "    # ignore_exceptions=True,\n",
     "):\n",
-    "    if delayed is True:\n",
-    "        delayed = dask.delayed(pure=True)\n",
-    "    elif delayed is False:\n",
-    "        delayed = lambda func, **kwargs: func\n",
+    "    delayed = get_delayed(delayed)\n",
     "    # TODO\n",
     "    # if ignore_exceptions:\n",
     "    #     excepts_get_nd2_frame = excepts(Exception, get_nd2_frame)\n",
@@ -409,10 +438,13 @@
     "            timepoints = range(nd2.sizes[\"t\"])\n",
     "    else:\n",
     "        if timepoints is None:\n",
-    "            timepoints = cycle(range(nd2.sizes[\"t\"]))\n",
+    "            timepoints = it.cycle(range(nd2.sizes[\"t\"]))\n",
+    "    ts_iter = list(zip(timepoints, scale))\n",
+    "    if progress_bar is not None:\n",
+    "        ts_iter = progress_bar(ts_iter)\n",
     "    animation = [\n",
-    "        delayed(mosaic_frame)(get_frame_func, positions, input_dims, t, scale=s)\n",
-    "        for t, s in zip(timepoints, scale)\n",
+    "        mosaic_frame(get_frame_func, positions, input_dims, t, scale=s, center=center, offset=offset, delayed=delayed)\n",
+    "        for t, s in ts_iter\n",
     "    ]\n",
     "    return animation"
    ]
@@ -424,7 +456,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "extrema = get_intensity_extrema(nd2, (\"YFP-DUAL\", \"RFP-Penta\"))"
+    "extrema = get_intensity_extrema(nd2, (\"YFP-DUAL\", \"RFP-PENTA\"))"
    ]
   },
   {
@@ -442,16 +474,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaling_funcs = get_scaling_funcs(extrema)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scaling_funcs = get_scaling_funcs({\"YFP-DUAL\": (262, 8000), \"RFP-Penta\": (278, 8000)})"
+    "scaling_funcs = get_scaling_funcs(extrema)\n",
+    "#scaling_funcs = get_scaling_funcs({\"YFP-DUAL\": (262, 8000), \"RFP-Penta\": (278, 8000)})"
    ]
   },
   {
@@ -514,16 +538,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "np.geomspace(20, 0.05, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%time\n",
-    "scale = repeat(0.3)  # [0.3, 0.3, 0.3, 0.3]\n",
+    "num_t = nd2.sizes[\"t\"]\n",
+    "#scale = it.repeat(20)\n",
+    "scale = it.repeat(0.1)\n",
+    "#scale = np.geomspace(20, 0.05, num_t*3)# + np.linspace(0, 0, 0) #it.repeat(0.3)  # [0.3, 0.3, 0.3, 0.3]\n",
     "# timepoints = range(0, 119, 30)\n",
     "# timepoints = range(0, 110, 10)#[20,40,60]\n",
-    "timepoints = [20, 40, 60]\n",
+    "#timepoints = [20]\n",
+    "timepoints = range(num_t)\n",
+    "#timepoints = it.chain(range(num_t), range(num_t), range(num_t)) #[20]#[20, 40, 60]\n",
+    "offset = np.array([600, 400])\n",
     "animation_delayed = mosaic_animate_scale(\n",
     "    nd2_filename,\n",
     "    scale,\n",
     "    timepoints=timepoints,\n",
     "    scaling_funcs=scaling_funcs,\n",
+    "    offset=offset,\n",
     "    delayed=True,\n",
     ")"
    ]
@@ -534,7 +574,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "animation_future = client.compute(animation_delayed)"
+    "%%time\n",
+    "#animation_future = client.compute(animation_delayed)\n",
+    "animation_future = [client.compute(a) for a in tqdm(animation_delayed)]"
    ]
   },
   {
@@ -543,16 +585,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = client.gather(animation_future[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a[0].max()"
+    "a = client.gather(animation_future)"
    ]
   },
   {
@@ -562,7 +595,7 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(20, 20))\n",
-    "plt.imshow(a)"
+    "plt.imshow(a[0])"
    ]
   },
   {
@@ -571,7 +604,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "export_video(a, \"/home/jqs1/scratch/jqs1/microscopy/220704/mosaics/export_test.mp4\")"
+    "%%time\n",
+    "export_video(a, \"/home/jqs1/scratch/jqs1/microscopy/220704/mosaics/timelapse_zoom.mp4\", fps=10)"
    ]
   },
   {
@@ -580,7 +614,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Video(\"/home/jqs1/scratch/jqs1/microscopy/220704/mosaics/export_test.mp4\", embed=True)"
+    "Video(\"/home/jqs1/scratch/jqs1/microscopy/220704/mosaics/timelapse_3x3_5fps.mp4\", embed=True)"
    ]
   },
   {
@@ -595,6 +629,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
